# kalmx

./: .gitignore  CMakeLists.txt  Justfile  README.md  spack.yaml
book/: book.toml
book/src/: introduction.md
examples/: kf_demo.cpp
include/kalmx/: kf.hpp  rts.hpp
src/: kf.cpp
